manifests/tenants/my-tenant/company-services/matomo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: my-tenant-matomo
  labels:
    app.kubernetes.io/managed-by: company-as-code
