manifests/tenants/my-tenant/company-services/matomo/database.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo
  namespace: matomo
spec:
  template:
    spec:
      containers:
        - name: matomo
