manifests/tenants/my-tenant/company-services/matomo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo
  namespace: my-tenant-matomo
  labels:
    app.kubernetes.io/name: matomo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: matomo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: matomo
        app.kubernetes.io/part-of: company-services
    spec:
      containers:
        - name: matomo
          image: matomo:5-apache # {"$imagepolicy": "flux-system:matomo"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 30
