manifests/tenants/my-tenant/company-services/matomo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo
  namespace: my-tenant-matomo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: matomo
  ports:
    - name: http
      port: 80
      targetPort: 80
