manifests/tenants/my-tenant/company-services/matomo/domain.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo
  namespace: matomo
spec:
  template:
    spec:
      containers:
        - name: matomo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo
  namespace: matomo
  annotations:
    external-dns.alpha.kubernetes.io/hostname: analytics.TEMPLATE_DOMAIN
spec:
  tls:
    - hosts:
        - analytics.TEMPLATE_DOMAIN
  rules:
    - host: analytics.TEMPLATE_DOMAIN
